# veda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VEDAcontext.cpp  VEDAcontext.h  VEDAkernel.h  VEDAmodule.cpp  VEDAmodule.h  VEDAproc.cpp  VEDAproc.h  VEDAptr.h  VEDAstream.h  aveo.patch  aveo.patch.in  libvera.map  readme.md  rpm_post.sh.in  veblas.h  veda.cpp  veda.h  veda_args.cpp  veda_context.cpp  veda_device.cpp  veda_enums.h  veda_error.inc.cpp  veda_internal.cpp  veda_internal.h  veda_kernel.cpp  veda_macros.h  veda_mem.cpp  veda_module.cpp  veda_proc.cpp  veda_stream.cpp  veda_types.h  veda_version.cpp.in  vera.cpp  vera.h  vera_enums.h  vera_types.h
cmake/: CMakeDetermineVCCompiler.cmake  CMakeDetermineVCXXCompiler.cmake  CMakeDetermineVEDA_CXXCompiler.cmake  CMakeDetermineVEDA_FortranCompiler.cmake  CMakeDetermineVE_CCompiler.cmake  CMakeDetermineVE_CXXCompiler.cmake  CMakeDetermineVE_FortranCompiler.cmake  CMakeLists.txt  CMakeVCInformation.cmake  CMakeVCXXInformation.cmake  CMakeVEDA_CInformation.cmake  CMakeVEDA_CXXInformation.cmake  CMakeVEDA_FortranInformation.cmake  CMakeVE_CInformation.cmake  CMakeVE_CXXInformation.cmake  CMakeVE_FortranInformation.cmake  FindASL.cmake  FindBLAS.cmake  FindLAPACK.cmake  FindMPI.cmake  FindNLC.cmake  FindVE.cmake  InjectVE.cmake  VE_CMakeCompiler.cmake.in  VE_CMakeDetermineCompiler.cmake  VE_CMakeInformation.cmake
cmake/nec/: CMakeLists.txt  VE_CMakeCompiler.cmake.in  VE_CMakeDetermineCompiler.cmake  VE_CMakeInformation.cmake  VE_Helper.cmake
cmake/nec/inject/: CMakeCInformation.cmake  CMakeCXXInformation.cmake  CMakeDetermineCXXCompiler.cmake  CMakeDetermineFortranCompiler.cmake  CMakeFortranInformation.cmake  CMakeLists.txt
example/delayed_malloc/: CMakeLists.txt  device.vc  host.c  readme.md
example/helloworld/: CMakeLists.txt
example/helloworld_veda/: CMakeLists.txt  host.c  readme.md
src/: CMakeLists.txt  veda-smi.cpp  veda.cpp  veda.h  veda_args.cpp  veda_context.cpp  veda_device.cpp  veda_enums.h  veda_error.inc.cpp  veda_internal_types.h  veda_macros.h  veda_mem.cpp  veda_module.cpp  veda_ptr.h  veda_stream.cpp  veda_types.h  vera.cpp  vera.h
src/cmake/: CMakeDetermineVEDA_CCompiler.cmake  CMakeVEDA_FortranInformation.cmake  FindASL.cmake  FindBLAS.cmake  FindVE.cmake  InjectVE.in.cmake
src/cmake/nec/: VE_CMakeCompiler.cmake.in  VE_CMakeDetermineCompiler.cmake  VE_CMakeInformation.cmake
src/device/: CMakeLists.txt  veda.map  veda_device.h  veda_device_omp.h
src/device/veda/: device.h  device.vcpp  internal.h  kernels.vcpp  memset.vcpp  omp.h
src/python/: CMakeLists.txt  MANIFEST.in  __init__.py  setup.py.in  veda.py
src/smi/: CMakeLists.txt  veda-smi.cpp
src/tests/: CMakeLists.txt  test2.cpp  veda_1.cpp  veda_4.cpp  veda_5.cpp  veda_6.c  veda_cnt.cpp  veda_env.sh  veda_memset.cpp  veda_mpi.cpp  vera_1.cpp
src/tests/FT/: CMakeLists.txt  FT_VEDA_CONTEXT_01.cpp  FT_VEDA_DEVICE_01.cpp  FT_VEDA_MODULE_01.c  FT_VEDA_SM_01.cpp  FT_VEDA_exec_01.cpp  FT_VEDA_mem_01.cpp  test.vc  test.vcpp  veda_ft.h
src/tests/ve/: CMakeLists.txt  test.vcpp
src/ve/: CMakeLists.txt  veda_device.h  veda_device.vcpp  veda_device_internal.h  veda_device_omp.h  veda_kernels.h  veda_kernels.vcpp  veda_memset.vcpp
src/veda/: CMakeLists.txt  Context.cpp  Context.hpp  Contexts.cpp  Contexts.hpp  Device.cpp  Device.hpp  Devices.cpp  Devices.hpp  Guard.hpp  Kernel.hpp  Module.cpp  Semaphore.cpp  Semaphore.hpp  Stream.hpp  macros.hpp  veda.cpp  veda.h  veda.hpp  veda.map  veda_args.cpp  veda_context.cpp  veda_device.cpp  veda_enums.h  veda_error.inc.cpp  veda_hmem.cpp  veda_hmemset.cpp  veda_macros.h  veda_mem.cpp  veda_memset.cpp  veda_memset.tpl.h  veda_memset.types.h  veda_memset128.tpl.h  veda_module.cpp  veda_ptr.h  veda_stream.cpp  veda_types.h  veda_version.cpp.in  veda_version.h
src/veda/veda/: CMakeLists.txt  Context.cpp  Context.h  Contexts.cpp  Contexts.h  Device.cpp  Device.h  Devices.cpp  Kernel.h  Module.cpp  Semaphore.cpp  Semaphore.h  Stream.cpp  Stream.h  api.h  api_cpp_args.h  api_cpp_launch.h  api_cpp_memset.h  api_cpp_template.h  enums.h  internal.h  internal_macros.h  internal_types.h  macros.h  ptr.h  types.h  veda.cpp  veda_args.cpp  veda_context.cpp  veda_device.cpp  veda_error.inc.cpp  veda_hmem.cpp  veda_hmemset.cpp  veda_mem.cpp  (+8 more)
src/vera/: CMakeLists.txt  vera.cpp  vera.h  vera.map  vera_enums.h  vera_types.h
tests/: CMakeLists.txt  veda_1.cpp  veda_3.cpp  veda_4.cpp  vera_1.cpp  vera_2.cpp
tests/FT/: CMakeLists.txt  FT_VEDA_01.cpp  FT_VEDA_CONTEXT_01.cpp  FT_VEDA_DEVICE_01.cpp  FT_VEDA_MODULE_01.c  FT_VEDA_SM_01.cpp  FT_VEDA_exec_01.cpp  FT_VEDA_mem_01.cpp  FT_VEDA_mem_HMem_01.cpp  FT_VEDA_mem_HMem_02.cpp  FT_VEDA_mem_HMem_03.cpp  FT_VEDA_mem_HMem_04.cpp  FT_VEDA_mem_HMem_05.cpp  FT_VEDA_mem_HMem_06.cpp  FT_VEDA_mem_HMem_07.cpp  FT_VEDA_mem_HMem_08.cpp  FT_VERA_01.cpp  veda_utility.sh
tests/QIP/: CMakeLists.txt  QIP_VEDA_01.cpp  QIP_VEDA_02.cpp  QIP_VEDA_03.cpp  QIP_VEDA_04.cpp  ST_VEDA_04.cpp  ST_VEDA_05.cpp  ST_VEDA_06.cpp  ST_VEDA_07.cpp  ST_VEDA_08.cpp  ST_VEDA_09.cpp  ST_VEDA_10.cpp  ST_VEDA_11.cpp  ST_VEDA_12.cpp  ST_VEDA_13.cpp  ST_VEDA_14.cpp  ST_VEDA_15.cpp  ST_VEDA_16.cpp  ST_VEDA_HMem_04.cpp  ST_VEDA_HMem_05.cpp  ST_VEDA_HMem_06.cpp  ST_VEDA_HMem_07.cpp  ST_VEDA_HMem_08.cpp  ST_VEDA_HMem_09.cpp  ST_VEDA_HMem_10.cpp  ST_VEDA_HMem_11.cpp  ST_VEDA_HMem_12.cpp  ST_VEDA_HMem_13.cpp  ST_VEDA_HMem_14.cpp  ST_VEDA_HMem_15.cpp  ST_VEDA_HMem_16.cpp
tests/ST/: CMakeLists.txt  ST_VEDA_01.cpp  ST_VEDA_02.cpp  ST_VEDA_03.cpp
tests/device/: CMakeLists.txt  QIP_VEDA_01.vf90  QIP_VEDA_02.vcpp  QIP_VEDA_03.vcpp  ST_VEDA_01.vcpp  ST_VEDA_02.vcpp  issue_836.vc  test.vcpp  tmpl.h  ve_hmem_ptr.vcpp  ve_omp_func.vcpp
tests/host/: CMakeLists.txt  issue_836.cpp  test.cpp  veda_1.cpp  veda_2.cpp  veda_4.cpp  veda_7.cpp  veda_cpp.cpp  veda_env.cpp  veda_memcpy.cpp  veda_memset.cpp  veda_mpi.cpp  veda_perf.cpp  veda_profiler.cpp  veda_template.cpp
tests/ve/: CMakeLists.txt  test.vcpp
ve/: CMakeLists.txt  libveda.map  veda_device.h  veda_device.vcpp  veda_device_internal.h  veda_kernels.vcpp
(+113 files in other folders)
