CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(VEDA VERSION 1.3.2 LANGUAGES C CXX)

FIND_PACKAGE(Illyrian 0.1.3 REQUIRED)
ILLYRIAN_PROJECT(
	C_STANDARD	17
	CXX_STANDARD	17
	INSTALL_PREFIX	"/usr/local/ve/"
	SUPPORTED_OS	"Linux"
)

ILLYRIAN_FIND_PACKAGE(Tungl VERSION 0.1 REQUIRED PYTHON "tungl/cmake" PATHS "/usr/local/nle/tungl/cmake")

## CMake Stuff -----------------------------------------------------------------
ILLYRIAN_OPTIONS(VEDA_BUILD_TYPE SHARED STATIC)
ILLYRIAN_OPTIONS(VEDA_DIST_TYPE LOCAL VEOS PYTHON)

## Set Build Dependent Properties ----------------------------------------------
INCLUDE(dist/CMakeLists.txt)

ADD_SUBDIRECTORY(cmake)
ADD_SUBDIRECTORY(src)

## Tests -----------------------------------------------------------------------
OPTION(VEDA_WITH_TESTS "Enable tests" OFF)
IF(VEDA_WITH_TESTS)
	ADD_SUBDIRECTORY(tests)
ENDIF()

## Licenses --------------------------------------------------------------------
IF(VEDA_DIST_TYPE STREQUAL VEOS)
	INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/LICENSE DESTINATION ${VEDA_INSTALL_PATH} RENAME VEDA_LICENSE)
ELSE()
	INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/LICENSE DESTINATION ${VEDA_INSTALL_PATH})
	INSTALL(FILES ${AVEO_PATH}/src/COPYING DESTINATION ${VEDA_INSTALL_PATH} RENAME AVEO_LICENSE)
	INSTALL(FILES ${AVEO_PATH}/src/prereqs/ve-urpc/LICENSE DESTINATION ${VEDA_INSTALL_PATH} RENAME VEURPC_LICENSE)
ENDIF()
