INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/../)
ADD_EXECUTABLE(veda_test ${CMAKE_CURRENT_LIST_DIR}/test.cpp)
TARGET_LINK_LIBRARIES(veda_test veda)

ADD_EXECUTABLE(veda_test2 ${CMAKE_CURRENT_LIST_DIR}/test2.cpp)
TARGET_LINK_LIBRARIES(veda_test2 veda)

INSTALL(TARGETS veda_test veda_test2 RUNTIME DESTINATION tests)

ADD_SUBDIRECTORY(ve)