SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
ENABLE_LANGUAGE(VEDA_CXX VEDA_C VEDA_Fortran)

GET_TARGET_PROPERTY(VEDA_BINARY_DIR veda BINARY_DIR)
INCLUDE_DIRECTORIES(${VEDA_BINARY_DIR})

GET_TARGET_PROPERTY(VEDA_SOURCE_DIR veda SOURCE_DIR)
INCLUDE_DIRECTORIES(${VEDA_SOURCE_DIR})

GET_TARGET_PROPERTY(VEDA_DEVICE_SOURCE_DIR veda_device SOURCE_DIR)
INCLUDE_DIRECTORIES(${VEDA_DEVICE_SOURCE_DIR})

IF(VEDA_WITH_VERA)
	GET_TARGET_PROPERTY(VERA_SOURCE_DIR vera SOURCE_DIR)
	INCLUDE_DIRECTORIES(${VERA_SOURCE_DIR})
ENDIF()

ADD_SUBDIRECTORY(host)
ADD_SUBDIRECTORY(device)
ADD_SUBDIRECTORY(FT)
ADD_SUBDIRECTORY(QIP)
ADD_SUBDIRECTORY(ST)
