ENABLE_LANGUAGE(VCXX)

SET(SRC
	${CMAKE_CURRENT_LIST_DIR}/veda_device.vcpp
	${CMAKE_CURRENT_LIST_DIR}/veda_kernels.vcpp
)

ADD_LIBRARY				(veda_device SHARED ${SRC})
TARGET_COMPILE_OPTIONS	(veda_device PRIVATE -fopenmp)
TARGET_LINK_OPTIONS		(veda_device PRIVATE -fopenmp -Wl,--version-script=${CMAKE_CURRENT_LIST_DIR}/libveda.map)
SET_TARGET_PROPERTIES	(veda_device PROPERTIES OUTPUT_NAME "veda")

INSTALL(TARGETS veda_device LIBRARY DESTINATION libve)
INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/veda_device.h DESTINATION include)
