CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

PROJECT(VEDA_DELAYED_MALLOC LANGUAGES C)

SET(CMAKE_MODULE_PATH /usr/local/ve/veda/cmake)
FIND_PACKAGE(VE)

ENABLE_LANGUAGE(VC)

SET(CMAKE_BUILD_TYPE RELEASE)
INCLUDE_DIRECTORIES(${VEDA_INCLUDES})

ADD_EXECUTABLE			(delayed_malloc host.c)
TARGET_LINK_LIBRARIES	(delayed_malloc ${VEDA_LIBRARY})
ADD_LIBRARY				(delayed_malloc_device SHARED device.vc)
TARGET_LINK_LIBRARIES	(delayed_malloc_device ${VEDA_DEVICE_LIBRARY})