CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(VEDA_HELLO_WORLD LANGUAGES C)

SET(CMAKE_MODULE_PATH /usr/local/ve/veda/cmake /opt/nec/ve/share/veda/cmake)
FIND_PACKAGE(VE)

ENABLE_LANGUAGE(VEDA_C)

SET(CMAKE_BUILD_TYPE RELEASE)
INCLUDE_DIRECTORIES(${VEDA_INCLUDES})

ADD_EXECUTABLE		(hello_world host.c)
TARGET_LINK_LIBRARIES	(hello_world ${VEDA_LIBRARY})
ADD_LIBRARY		(hello_world_device SHARED device.vc)