GET_TARGET_PROPERTY(VEDA_BINARY_DIR veda BINARY_DIR)
GET_TARGET_PROPERTY(VEDA_SOURCE_DIR veda SOURCE_DIR)
INCLUDE_DIRECTORIES(${VEDA_BINARY_DIR})
INCLUDE_DIRECTORIES(${VEDA_SOURCE_DIR})

ADD_EXECUTABLE(veda-smi ${CMAKE_CURRENT_LIST_DIR}/veda-smi.cpp)
TARGET_LINK_LIBRARIES(veda-smi veda)
SET_TARGET_PROPERTIES(veda-smi PROPERTIES LINK_FLAGS "-Wl,-rpath,$ORIGIN/../lib64")

IF(VEDA_DIST_TYPE STREQUAL VEOS)
	INSTALL(TARGETS veda-smi RUNTIME DESTINATION veos/bin)
ELSE()
	INSTALL(TARGETS veda-smi RUNTIME DESTINATION ${VEDA_INSTALL_PATH}/bin)
ENDIF()
