INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/../)
ADD_EXECUTABLE(veda_test1 ${CMAKE_CURRENT_LIST_DIR}/veda_1.cpp)
TARGET_LINK_LIBRARIES(veda_test1 veda)

ADD_EXECUTABLE(veda_test2 ${CMAKE_CURRENT_LIST_DIR}/veda_2.cpp)
TARGET_LINK_LIBRARIES(veda_test2 veda)

ADD_EXECUTABLE(veda_test3 ${CMAKE_CURRENT_LIST_DIR}/veda_3.cpp)
TARGET_LINK_LIBRARIES(veda_test3 veda)

ADD_EXECUTABLE(veda_test4 ${CMAKE_CURRENT_LIST_DIR}/veda_4.cpp)
TARGET_LINK_LIBRARIES(veda_test4 veda)

ADD_EXECUTABLE(veda_test5 ${CMAKE_CURRENT_LIST_DIR}/veda_5.cpp)
TARGET_LINK_LIBRARIES(veda_test5 veda)

ADD_EXECUTABLE(veda_test6 ${CMAKE_CURRENT_LIST_DIR}/veda_6.c)
TARGET_LINK_LIBRARIES(veda_test6 veda)

ADD_EXECUTABLE(veda_mpi ${CMAKE_CURRENT_LIST_DIR}/veda_mpi.cpp)
TARGET_LINK_LIBRARIES(veda_mpi veda)

ADD_EXECUTABLE(vera_test1 ${CMAKE_CURRENT_LIST_DIR}/vera_1.cpp)
TARGET_LINK_LIBRARIES(vera_test1 vera)

ADD_EXECUTABLE(vera_test2 ${CMAKE_CURRENT_LIST_DIR}/vera_2.cpp)
TARGET_LINK_LIBRARIES(vera_test2 vera)

INSTALL(TARGETS veda_test1 veda_test2 veda_test3 veda_test4 veda_test5 veda_test6 veda_mpi vera_test1 vera_test2 RUNTIME DESTINATION ${VEDA_INSTALL_PATH}/tests)

ADD_SUBDIRECTORY(ve)